<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Nuclear Alarms</string>
    <string name="app_name">Nerd Ninja Alarm</string>
    <string name="add">Add Alarm</string>
    <string name="clear">Clear All</string>
    <string name="preferences">Preferences</string>
    <string name="wakeup">Wakey Wakey!!</string>
    <string name="changetime">Change the time!!</string>
    <string name="setthetime">Set alarm time</string>
    <string name="timesetto">Alarm set for </string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="sound">Sound</string>
    <string name="testme">Test Me</string>
    <string name="nerd">Nerd</string>
    <string name="snooze">Snooze</string>
    <string name="vibrate">Vibrate</string>
    <string name="music">Music</string>
    <string name="volume">Volume</string>
    <string name="enabled">Enabled</string>
    <string name="mode">Mode</string>
    <string name="mode_summary">This will define the characteristics of your alarm</string>
    <string name="delete_all">All Alarms Deleted!</string>
    <string name="mode_select">Please select a mode</string>
    <string name="snooze_select">Please select snooze duration</string>
    <string name="sound_select">Please select a sound</string>
    <string name="sound_over">sleeping</string>
    <string name="noalarmset">No Alarms set</string>
    <string name="alarms">Alarms List</string>
    <string name="alarmtitle">N E R D   A L A R M</string>
    <string name="alarmtext1">Beep Beep This is your alarm</string>
    <string name="alarmtext2">Nerd Alarm</string>
    <string name="repeatthat">Repeat again</string>
    <string name="selectdays">Select days</string>
    <string name="done">Done</string>
    <string name="info">Info</string>
    <string name="stop">Stop</string>
    <string name="nerd_cough">cough</string>
    <string name="angry_cough">arrrgh</string>
    <string name="happy_cough">ooh la la</string>
    <string name="repeat">Repeating Alarm</string>
    <string name="repeat_2">No Repeat Set</string>
	<string name="norepeatset">No Repeat Set</string>
	<string name="monday">Mon</string>
	<string name="tuesday">Tue</string>
	<string name="wednesday">Wed</string>
	<string name="thursday">Thu</string>
	<string name="friday">Fri</string>
	<string name="saturday">Sat</string>
	<string name="sunday">Sun</string>
	<string name="weekdays">Weekdays</string>
	<string name="everyday">Every Day - no rest for you!</string>
	<string name="alarm_enabled">Alarm will activate in</string>
	<string name="alarm_disabled">Alarm is now deactivated</string>
	<string name="alarm_updated">Alarm is now updated</string>
	<string name="alarm_update_failed">Alarm failed to update</string>
	<string name="testme_title">Test for you</string>
	<string name="ok">OK</string>
	<string name="testme_ok">You passed!</string>
	<string name="testme_move_on">Lets move on</string>
	<string name="testme_incorrect">Incorrect - Try Again</string>
	<string name="alarm_days">days and</string>
	<string name="alarm_minutes">minutes</string>
	<string name="alarm_hours">hours and</string>
	<string name="mode_default">Bunny</string>
	<string name="alarm_category">Alarm Details</string>
	<string name="alarm_greeting">Alarm Greeting</string>
	<string name="greeting_summary">This will be included for the talking alarm</string>
	<string name="alarm_vibrate">Vibrate</string>
	<string name="vibrate_summary">Alarm will vibrate on activation</string>
	<string name="snooze_summary">How long will the alarm snooze for</string>
	<string name="alarm_ringtone">AlarmTone</string>
	<string name="ringtone_summary">What sound will the Alarm make</string>
	<string name="nerd_summary">Will access your local Weather Info and include this information</string>
	<string name="err_greeting">eek! Error has occurred!</string>	
	<string name="temp">degrees(c)</string>
	<string name="bunny_greeting">hmmmmmmm</string>
	<string name="nerd_greeting">Nerd says hi</string>
	<string name="nuclear_greeting">Get owt!, Get owt! Get downn! Get up! Hurry</string>
	<string name="ninja_greeting">I am silent but deadly</string>
	<string name="andy_greeting">What are you doing?</string>
	<string name="helen_greeting">Oh my my, you are fantastic!</string>
	<string name="info_header">Preferences Information</string>
	<string name="mode_info_bunny">Bunny Mode is an easy alarm. Starts early than planned but gentle.</string>
	<string name="mode_info_nerd">Nerd provides some interesting facts and opinions.</string>
	<string name="mode_info_nuclear">Nuclear is the loudest, when you absolutely need to hear an alarm. You have to press stop on this mode.</string>
	<string name="mode_info_ninja">Ninja. Ultra discreet. No sound, No talk, No unlock. Quick vibrate.</string>
	<string name="mode_info_angry">Angry mode does not like alarms.</string>
	<string name="mode_info_happy">Happy mode provides some more positivity to your life.</string>
	<string name="pref_warning">WARNING : Note the nerd checkbox will access the internet. This is switched on for Nerd Mode by default.</string>
	<string name="pref_warning_two">Volume is reset to previous levels after the alarm completes. Nearly all modes rely on speaking for full effect.</string>
	
<string-array name="nerd_array">
	<item>A jellyfish is 95 percent water!</item>
	<item>The Mona Lisa has no eyebrows. It was the fashion in Renaissance Florence to shave them off! She is ugly</item>
	<item>There are over 58 million dogs in the U.S! Thats animal dogs.</item>
	<item>Windmills always turn counter-clockwise. Except for the windmills in Ireland!... Irish weirdos!</item>
	<item>Recycling one glass jar, saves enough energy to watch T.V for 3 hours. Alternatively, stop watching T.V</item>
	<item>Over 10,000 birds a year die from smashing into windows. Lets ban windows</item>
	<item>Men are 6 times more likely to be struck by lightning than women!. Thats because they want to be struck.</item>
	<item>In the year 2000, Pope John Paul the second was named an Honorary Harlem Globetrotter. He was the best one.</item>
	<item>Human teeth are almost as hard as rocks. Lets play teeth, paper, scissors!</item>
	<item>Every day 20 banks are robbed. The average take is 2,500 dollars. Except in Ireland, where the banks rob the people.</item>
	</string-array>
<string-array name="helen_array">
	<item>You are wonderful.</item>
	<item>You look good.</item>
	<item>I think you are the best.</item>
	<item>Today will be super now that you are here.</item>
	<item>You are ridiculously hot.</item>
	<item>I would vote for you for President.</item>
	<item>Do not worry about a thing, you are super capable.</item>
	<item>You are so hot, I could fry eggs on you.</item>
	<item>Damn! you keep getting better looking!</item>
	<item>Row Row Row your boat, gently down the stream, merrily merrily merrily merrily, life is but a dream.</item>
	</string-array>
<string-array name="andy_array">
	<item>I shake an onion in your hair ... and poke my finger in your nose.</item>
	<item>Your room is smelly like your armpit.</item>
	<item>I wave a smelly sock in your face and cough in your general direction.</item>
	<item>I have hidden your shoes, you will never find them.</item>
	<item>Your toothbrush is now in the toilet. I rejoice in this.</item>
	<item>You have a stupid phone, but some people say : like phone, like user.</item>
	<item>You cannot keep ignoring me, I will throw up in your shoes and sit on your cat.</item>
	<item>I am using up the battery on your phone, soon, I will be ruler of your world muh hahahahaha haha</item>
	<item>You are stubborn like a mule. And have a strange taste in music. But I like you.</item>
	<item>I give up. You ignore everything I say. This relationship is not working out. Aaaaaaaaaaaaarrrrrgh. Get up!</item>
	</string-array>
<string-array name="modes_array">
	<item>Bunny</item>
	<item>Nerd</item>
	<item>Nuclear</item>
	<item>Ninja</item>
	<item>AngryAlarm</item>
	<item>HappyHappy</item>
	</string-array>
<string-array name="modes_codes">
	<item>0</item>
	<item>1</item>
	<item>2</item>
	<item>3</item>
	<item>4</item>
	<item>5</item>
	</string-array>
<string-array name="days_array">
	<item>Repeat</item>
	<item>Monday</item>
	<item>Tuesday</item>
	<item>Wednesday</item>
	<item>Thursday</item>
	<item>Friday</item>
	<item>Saturday</item>
	<item>Sunday</item>
	</string-array>
<string-array name="snooze_array">
	<item>0 mins - just stop!</item>
	<item>5 mins</item>
	<item>10 mins</item>
	<item>15 mins</item>
	<item>20 mins</item>
	<item>30 mins</item>
	</string-array>
<string-array name="snooze_codes">
	<item>0</item>
	<item>5</item>
	<item>10</item>
	<item>15</item>
	<item>20</item>
	<item>30</item>
	</string-array>
<string-array name="testme_array">
	<item>Are you awake?? - Please type "yes"</item>
	<item>Are you awake?? - Please type "yawn"</item>
	<item>Are you awake?? - Please type "snoozy"</item>
	<item>Are you awake?? - Please type ":("</item>
	<item>Are you awake?? - Please type "iamnow"</item>
	<item>You deserve more rest</item>
	<item>You look tired, - just hit OK</item>
	</string-array>
<string-array name="testme_answers">
	<item>yes</item>
	<item>yawn</item>
	<item>snoozy</item>
	<item>:(</item>
	<item>iamnow</item>
	<item>ok</item>
	<item>ok</item>
	</string-array>
</resources>