<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/mode_select">
                <ListPreference
                        android:title="@string/mode"
                        android:summary="@string/mode_summary"
                        android:key="modePref"
                        android:entries="@array/modes_array"
                        android:entryValues="@array/modes_array" />
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/alarm_category">
        <EditTextPreference
                android:name="Greeting Preference"
                android:summary="@string/greeting_summary"
                android:title="@string/alarm_greeting"
                android:key="greetingPref"/>
        <CheckBoxPreference
                        android:title="@string/alarm_vibrate"
                        android:summary="@string/vibrate_summary"
                        android:key="vibratePref" />
         <ListPreference
                        android:title="@string/snooze"
                        android:summary="@string/snooze_summary"
                        android:key="snoozePref"
                        android:entries="@array/snooze_array"
                        android:entryValues="@array/snooze_codes"/>
        <CheckBoxPreference
                        android:title="@string/nerd"
                        android:summary="@string/nerd_summary"
                        android:key="nerdPref" />
        <RingtonePreference
                android:name="Ringtone Preference"
                android:summary="@string/ringtone_summary"
                android:title="@string/alarm_ringtone"
                android:ringtoneType="alarm"
                android:showSilent="true"
                android:showDefault="true"
                android:key="soundPref" />
        <PreferenceScreen
                android:key="SecondPrefScreen"
                android:title="Second PreferenceScreen"
                android:summary="This is a second PreferenceScreen">
                <EditTextPreference
                        android:name="An other EditText Preference"
                        android:summary="This is a preference in the second PreferenceScreen"
                        android:title="Edit text"
                        android:key="SecondEditTextPref" />
        </PreferenceScreen>
        <Preference
                android:title="@string/save"
                android:gravity="center"
                android:summary="This works almost like a button"
                android:key="customPref" />
        </PreferenceCategory>
</PreferenceScreen>