<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_top"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/ic_background">
    <ScrollView android:id="@+id/ScrollView"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">  
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_top_two"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
      <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_header_top"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp">
      <ImageView android:id="@+id/image"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:src="@drawable/ic_att6"/>
     <TextView android:id="@+id/window_title"
				 android:text="@string/info_header" 
				 android:textColor="#000f00"
				 android:layout_toRightOf="@+id/image"
        		 android:textSize="30sp"  
			     android:layout_width="wrap_content" 
				 android:layout_height="wrap_content"/>
	 <TextView android:id="@+id/pref_warning"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:text="@string/pref_warning"
	    		  android:layout_below="@+id/window_title"
        		  android:paddingTop="10dp"
        		  android:textSize="15sp"  
	              android:textStyle="bold"
	              android:textColor="#a52a2a"/>
	 <TextView android:id="@+id/pref_warning_two"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/pref_warning_two"
              android:layout_below="@+id/pref_warning"
              android:paddingTop="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/>
	 </RelativeLayout>
	<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />		
    <TextView android:id="@+id/mode_header"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:text="@string/mode"
              android:paddingTop="10dp"
              android:textSize="20sp"  
              android:textColor="#000f00"/>
    <TextView android:id="@+id/mode_info_bunny"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_bunny"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/>
    <TextView android:id="@+id/mode_info_nerd"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_nerd"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/> 	
    <TextView android:id="@+id/mode_info_nuclear"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_nuclear"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/> 	
    <TextView android:id="@+id/mode_info_ninja"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_ninja"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/> 	
<TextView android:id="@+id/mode_info_angry"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_angry"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/> 	
    <TextView android:id="@+id/mode_info_happy"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/mode_info_happy"
              android:padding="10dp"
              android:textSize="15sp"  
              android:textColor="#000f00"/> 	
</LinearLayout>
</ScrollView>
</LinearLayout>
