 <LinearLayout android:id="@+id/AddAlarm_LL"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/att7"
xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView android:id="@+id/ScrollView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">        
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		 	<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />
					<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					    android:layout_width="fill_parent"
					    android:layout_height="?android:attr/listPreferredItemHeight"
		    			android:padding="6dip">
				     <TextView android:id="@+id/timeDisplay"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="3px"
				        android:textColor="#000f00"
				        android:text=""/>
				     <TextView  android:id="@+id/secondLine"
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:layout_alignParentBottom="true"
				        android:layout_alignParentRight="true" 
				        android:singleLine="true"
				        android:ellipsize="marquee"
				        android:textColor="#000f00"
				        android:text="@string/timesetto" />		
		    		<TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:layout_above="@id/secondLine"
				        android:layout_alignWithParentIfMissing="true"
		        		android:gravity="center_vertical"
		        		android:textColor="#000f00"
		        		android:text="@string/setthetime" />
					</RelativeLayout>
		<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />
				<TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="10dip"
				        android:layout_marginLeft="3px"
				        android:textColor="#000f00"
		        		android:text="@string/mode_select"/>
		    	<Spinner 
				        android:id="@+id/mode_spinner"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="3px"
				        android:prompt="@string/mode_select"
				        	/>   
		<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />
					<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:orientation="horizontal">
					<TextView android:id="@+id/timeDisplay"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textColor="#000f00"
		        		android:text="@string/title"
					    android:layout_marginLeft="3px"
					    android:layout_marginRight="10px"/>
					<EditText
					    android:id="@+id/title_edittext"
					    android:layout_marginTop="3px"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"/>
					</LinearLayout> 
		<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00"/>
				<CheckBox android:id="@+id/enabled_checkbox"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="1px"
				        android:textColor="#000f00"
		        		android:text="@string/enabled" 
				        />
		<View   android:id="@+id/firstDivider"
		        android:layout_height="2dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />
				<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				    android:layout_width="fill_parent"
				    android:layout_height="?android:attr/listPreferredItemHeight"    
				    android:padding="1dip">
			    <TextView android:id="@+id/repeatTime"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginLeft="3px"
				        android:textColor="#000f00"
		        		android:text="@string/repeat"/>
				 <TextView  android:id="@+id/repeatLine"
				        android:layout_width="fill_parent"
				        android:layout_height="26dip" 	        
				        android:layout_alignParentBottom="true"
				        android:layout_alignParentRight="true" 
				        android:singleLine="true"
				        android:ellipsize="marquee"
				        android:textColor="#000f00"
		        		android:text="@string/repeat_2"/>	
				</RelativeLayout>
		<View   android:id="@+id/firstDivider"
		        android:layout_height="4dp"
		        android:layout_width="fill_parent"
		        android:background="#000f00" />
		        
	<Button android:id="@+id/saveAlarm"
				 	android:padding="10dip"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_alignParentBottom="true"
				    android:gravity="center_vertical|center_horizontal"
				    android:textColor="#000f00"
		        	android:text="@string/save"/>    
		</LinearLayout>
	</ScrollView>
</LinearLayout>

